refactor: 채점 결과로 반환하는 등급 리스트 변경 불가능하도록 수정